--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -20,7 +20,7 @@
 
 .content-container {
   background: $cardBg;
-  height: 80vh;
+  height: 83vh;
   width: 90%;
   display: grid;
   border-radius: 20px;
@@ -32,12 +32,18 @@
 .img-container {
   display: grid;
   place-items:center;
+
+  &:hover {
+    color: $Cyan;
+  }
     
 }
 
   img {
   margin-top: 20px;
   border-radius: 10px;
+
+
 
 }
 
@@ -55,20 +61,41 @@
  p{ 
    line-height: 3;
    color: #fff;
+   font-weight: 600 ;
+   font-size: 1.4rem;
+   cursor: pointer;
+
+  &:hover {
+     color: $Cyan;
+   }
  
  }
  }
 
  .text-content {
    line-height: 1.7;
+
+  p{
+    font-size: 1rem;
+    color: $SoftBlue;
+
+  }
  }
 
  .eth-icon {
   display: flex;
   justify-content: space-between;
 
+  span{
+    color: $Cyan;
+  }
+
   .time {
     margin-right: 25px;
+
+  span {
+    color: $SoftBlue;
+  }
   }
 
 
@@ -77,6 +104,7 @@
  hr {
    margin-top: 20px;
    width: 92%;
+   border-color: $lineColor;
  }
 
 
@@ -92,6 +120,17 @@ img {
 p{
 margin-top: 10%;
 margin-left: 15px;
+color: $SoftBlue;
+
+span {
+  color: #fff;
+  cursor: pointer;
+
+&:hover {
+  color: $Cyan;
+}
+
+}
 }
 }
 }
